# CS205_2022F

./: .clang-format  .clang-tidy  .gitignore  CS205_2022F.code-workspace  README.md  pyproject.toml
class1/: CMakeLists.txt
class1/src/: CMakeLists.txt  hello.cpp  mainmul.cpp
class1_multi/: CMakeLists.txt
lab1/: CMakeLists.txt  result.md
lab1/include/: add.h
lab1/src/: add.cpp  cout_test.cpp  main.cpp
lab10/: CMakeLists.txt
lab10/include/: myComplex.h
lab10/src/: myComplex.cpp  test_complex.cpp
lab11/: CMakeLists.txt  run_1.txt  valgrind_2.txt
lab11/src/: exercise1.cpp  exercise2.cpp
lab13/: CMakeLists.txt
lab13/include/: dict.h  exercise1.h
lab13/src/: exercise1.cpp  exercise2.cpp  exercise3.cpp
lab14/: CMakeLists.txt
lab14/include/: exercise2.h
lab14/src/: exercise1.cpp  exercise2.cpp
lab15/: CMakeLists.txt
lab15/include/: exercise1.h  exercise2.h
lab15/src/: exercise1.cpp  exercise2.cpp
lab2/: CMakeLists.txt
lab2/src/: ascii_to_int.cpp  ex_2.cpp  ex_3.cpp  ieee754bin.cpp  main_1.cpp  overflow.cpp
lab3/fac_arb/: fac.cpp  fac.h  main  main.cpp  makefile
lab3/fib/: fib.cpp  fib.h  main  main.cpp
lab3/simple_calc/: main  main.cpp
lab4/bugpick/: Makefile  cards  cards.cpp  union_test  union_test.cpp
lab4/stu/: CMakeLists.txt
lab4/stu/include/: stuinfo.h
lab4/stu/src/: main.cpp  stuinfo.cpp
lab4/weather/: weather  weather.cpp
lab5/: CMakeLists.txt
lab5/src/: arr_dynamic_new.cpp  arr_pointer_1.cpp  arr_pointer_2.cpp  pointer_1.cpp
lab5_stu/: CMakeLists.txt
lab5_stu/include/: stu.h
lab5_stu/src/: stu.cpp
lab8/: CMakeLists.txt  main.cpp  matoperation.cpp  matoperation.h  timeeval.h  timeeval_mult.cpp  timeeval_mult.h
lab8-add/: CMakeLists.txt  myMatrix.cpp  myMatrix.h
lab8/include/: addvector.h  myvector.h
lab8/report/: test_2^28_baseline_o3.csv
lab8/src/: avx2_add.cpp  baseline_add.cpp  myvector.cpp  timeeval.cpp
lab9/: CMakeLists.txt
lab9/src/: ex1_main.cpp  ex2_main.cpp  ex3_main.cpp
project1/: CMakeLists.txt  project1.md
project1/include/: JRegex.h  arbmul.h  debug_print.h  main.h  parser.h
project1/reference/: jregex_example.c  rpn_double.c  rpn_special_func.c
project1/src/: JRegex.c  arbmul.cpp  debug_print.cpp  main.c  main.cpp  parser.cpp
project1_simple/: main  main.c  report_proj1.md
project2/: CMakeLists.txt
project2/include/: main.h  vector_dot.h
project2/report/: analysis.ipynb  report.md  singlefile.cpp  test_2^18_avx2.csv  test_2^18_baseline.csv  test_2^24_baseline.csv  test_2^28_avx2.csv  test_2^28_avx2_o3.csv  test_2^28_baseline.csv  test_2^28_baseline_o3.csv
project2/src/: main.cpp  vector_dot.cpp
project3/: CMakeLists.txt
project3/include/: conv3x3.h  conv_utils.h  matrixlib.h
project3/report/: proj3_report.typ  report.md
project3/src/: benchmark.cpp  conv3x3.cpp  conv_utils.cpp  matrixlib.cpp
