cmake_minimum_required(VERSION 3.10)
project(lab8_add)

option(USE_AVX2 "Use AVX2 instructions only" OFF)
option(USE_AVX2_AND_OMP "Use both AVX2 and OpenMP" OFF)

include_directories(${PROJECT_SOURCE_DIR}/include)
set(common_src ${PROJECT_SOURCE_DIR}/src/myvector.cpp ${PROJECT_SOURCE_DIR}/src/timeeval.cpp)
set(baseline_src ${PROJECT_SOURCE_DIR}/src/baseline_add.cpp)
set(avx2_src ${PROJECT_SOURCE_DIR}/src/avx2_add.cpp)
set(omp_src ${PROJECT_SOURCE_DIR}/src/omp_baseline_add.cpp)
set(omp_avx2_src ${PROJECT_SOURCE_DIR}/src/omp_avx2_add.cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native")
add_executable(baseline_add ${common_src} ${baseline_src})

if(${USE_AVX2})
  message("AVX2 instructions used")
  add_compile_definitions(__AVX2)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx2")
  add_executable(avx2_add ${common_src} ${avx2_src})

  if(${USE_AVX2_AND_OMP})
    message("AVX2 and OpenMP used")
    add_compile_definitions(_OMP_AND_AVX2)
    find_package(OpenMP REQUIRED)
    add_executable(omp_add ${common_src} ${omp_src})
    add_executable(omp_avx2_add ${common_src} ${omp_avx2_src})
    target_link_libraries(omp_add PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(omp_avx2_add PUBLIC OpenMP::OpenMP_CXX)
  endif()
endif()