include_directories("./include")
aux_source_directory(. DIR_SRCS)
message(${DIR_SRCS})
message(${PROJECT_SOURCE_DIR})
# set(ALL_SOURCES ${DIR_SRCS} PARENT_SCOPE)
foreach(source_file IN ITEMS ${DIR_SRCS})
    message(${source_file})
    string(REGEX REPLACE ".*/(.*).cp*" "\\1" program ${source_file})
    add_executable(${program} ${source_file})
    target_include_directories(${program} PRIVATE ${PROJECT_SOURCE_DIR}/include)
endforeach()